tests/parser/snapshots/parser_tests__parser__html_tests__tests__fixtures__embed-css.norg.snap
---
source: tests/parser/html_tests.rs
expression: "(html, toc, metadata, embed_css)"
---
- "<h1 id=\"styled-content\">Styled Content</h1>\n<p>This content has document-scoped CSS.</p>\n<h1 id=\"more-styled-content\">More Styled Content</h1>\n<p>Another section with additional styles.</p>\n"
- - level: 1
    title: Styled Content
    id: styled-content
  - level: 1
    title: More Styled Content
    id: more-styled-content
- title: Embed CSS Test
- ".styled-heading {\n  color: blue;\n  font-size: 2rem;\n}\n\n.norg-content p {\n  line-height: 1.6;\n  margin-bottom: 1rem;\n}\n"
