tests/parser/snapshots/parser_tests__parser__html_tests__tests__fixtures__images.norg.snap
---
source: tests/parser/html_tests.rs
expression: "(html, toc, metadata, embed_css)"
---
- "<h1 id=\"images\">Images</h1>\n<p>Image test</p>\n<img src=\"./relative/image.png\" alt=\"with alt text\" />\n"
- - level: 1
    title: Images
    id: images
- authors: Drake Bott
  created: "2025-07-10T17:51:58-0600"
  title: Images
  updated: "2025-07-10T18:00:36-0600"
  version: 1.1.1
- ""
