tests/parser/snapshots/parser_tests__parser__html_tests__tests__fixtures__links.norg.snap
---
source: tests/parser/html_tests.rs
expression: "(html, toc, metadata, embed_css)"
---
- "<h1 id=\"link-types\">Link Types</h1>\n<h2 id=\"url-links\">URL Links</h2>\n<p><a href=\"https://example.com\" target=\"_blank\" rel=\"noopener noreferrer\">https://example.com</a> <a href=\"https://github.com/nvim-neorg\" target=\"_blank\" rel=\"noopener noreferrer\">Neorg GitHub</a></p>\n<h2 id=\"file-links\">File Links</h2>\n<p><a href=\"docs/readme.html\">docs/readme.norg</a> <a href=\"path/to/file.html\">File Description</a></p>\n<h2 id=\"heading-links\">Heading Links</h2>\n<p><a href=\"#main-heading\">Main Heading</a> <a href=\"#sub-heading\">Sub Heading</a> <a href=\"#introduction\">Custom link text</a></p>\n<h2 id=\"mixed-content\">Mixed Content</h2>\n<p>This paragraph has a <a href=\"https://rust-lang.org\" target=\"_blank\" rel=\"noopener noreferrer\">Rust website</a> and <a href=\"tutorial.html\">tutorial file</a>.</p>\n"
- - level: 1
    title: Link Types
    id: link-types
  - level: 2
    title: URL Links
    id: url-links
  - level: 2
    title: File Links
    id: file-links
  - level: 2
    title: Heading Links
    id: heading-links
  - level: 2
    title: Mixed Content
    id: mixed-content
- author: Drake Bott
  title: Link Test
- ""
