tests/parser/snapshots/parser_tests__parser__html_tests__tests__fixtures__nested-lists.norg.snap
---
source: tests/parser/html_tests.rs
expression: "(html, toc, metadata, embed_css)"
---
- "<h1 id=\"nested-lists\">Nested Lists</h1>\n<h2 id=\"two-levels\">Two Levels</h2>\n<ul><li>Top level item<ul><li>Sub item A</li><li>Sub item B</li></ul></li><li>Another top level</li></ul>\n<h2 id=\"three-levels\">Three Levels</h2>\n<ul><li>Outer<ul><li>Middle<ul><li>Inner</li><li>Inner two</li></ul></li><li>Middle two</li></ul></li><li>Outer two</li></ul>\n<h2 id=\"mixed-markers\">Mixed Markers</h2>\n<ul><li>Bullet parent</li></ul>\n<ol><li>Numbered child A</li><li>Numbered child B</li></ol>\n<ul><li>Bullet parent two</li></ul>\n<h2 id=\"ordered-with-nested\">Ordered With Nested</h2>\n<ol><li>First<ol><li>Nested first</li><li>Nested second</li></ol></li><li>Second</li></ol>\n"
- - level: 1
    title: Nested Lists
    id: nested-lists
  - level: 2
    title: Two Levels
    id: two-levels
  - level: 2
    title: Three Levels
    id: three-levels
  - level: 2
    title: Mixed Markers
    id: mixed-markers
  - level: 2
    title: Ordered With Nested
    id: ordered-with-nested
- title: Nested Lists
- ""
